[package]
name = "rsbrowse"
version = "0.2.2"
authors = ["William R. Fraser <wfraser@codewise.org>"]
description = "an interactive browser for the contents of Rust crates"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.4.8", features = ["derive"] }
rayon = "1.8.0"
rustdoc-types = "0.23.0"
serde_json = "1.0"

[dependencies.cursive]
version = "0.20"
default-features = false
features = ["pancurses-backend"]

[dev-dependencies]
lazy_static = "1.4"
