[package]
name = "rsbrowse"
version = "0.2.9"
authors = ["Bill Fraser <bill@wfraser.dev>"]
description = "an interactive browser for the contents of Rust crates"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.4.8", features = ["derive"] }
cursive = "0.21.1"
indicatif = "0.17.7"
lazy_static = "1"
log = "0.4"
rayon = "1.8.0"
rustdoc-types = "0.40.0"
serde_json = "1.0"
tempfile = "3.8.1"

[dev-dependencies]
lazy_static = "1.4"
